--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>The question</title>
+  <title>The question - Error Page</title>
   <% if (process.env.NODE_ENV === 'production') { %>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
